# Remittance-Calibration

./: CMakeLists.txt  package.xml
include/remittance_calib/: calibrator.hpp  io.hpp  pcl_point.hpp  pdf.hpp  types.hpp
src/: calibrator.cpp  io.cpp  merge_pointclouds.cpp  run_calibration.cpp  run_correction.cpp  types.cpp
