<?xml version="1.0"?>
<package format="2">
  <name>remittance_calib</name>
  <version>0.0.0</version>
  <description>The remittance_calib package</description>
  <license>TODO</license>
  <maintainer email="guo104@todo.todo">guo104</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>glog_catkin</buildtool_depend>
  <buildtool_depend>gflags_catkin</buildtool_depend>
  <depend>pcl_catkin</depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
